Fix z-index for top sticky navbar

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -50,6 +50,10 @@
   padding-left: 0;
 }
 
+.top-navbar {
+  z-index: 99;
+}
+
 $topbar-height: 55px;
 .top-bar .menu a {
     height: $topbar-height;
